--- a/index.html
+++ b/index.html
@@ -2,129 +2,46 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Arabic Sunset Clock — Sunset = 12:00</title>
+  <title>Arabic Sunset Clock — Ghurubi Time</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Live Arabic sunset clock where the day resets at sunset. Toggle between 24-hour and AM/PM formats." />
+  <link rel="manifest" href="manifest.json">
   <script src="https://cdn.jsdelivr.net/npm/suncalc@1.9.0/suncalc.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/moment-hijri@2.1.2/moment-hijri.min.js"></script>
 
   <style>
-    body {
-      font-family: system-ui, Segoe UI, Roboto, Arial;
-      background: #f5f7fb;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-    }
-    .clock {
-      background: #fff;
-      padding: 28px;
-      border-radius: 14px;
-      box-shadow: 0 10px 24px rgba(0,0,0,.08);
-      text-align: center;
-      width: 320px;
-    }
-    .time {
-      font-size: 48px;
-      font-weight: 700;
-      margin-bottom: 6px;
-    }
-    .meta {
-      font-size: 13px;
-      color: #666;
-      margin-bottom: 14px;
-    }
-    .controls {
-      display: flex;
-      justify-content: center;
-      gap: 10px;
-      margin-bottom: 10px;
-    }
-    select, button {
-      padding: 6px 10px;
-      border-radius: 8px;
-      border: 1px solid #ddd;
-      cursor: pointer;
-    }
-    button {
-      background: #0070f3;
-      color: #fff;
-      border: none;
-    }
+    :root { --primary: #1a73e8; --text: #202124; --border: #dadce0; }
+    body { font-family: 'Segoe UI', Roboto, Arial, sans-serif; background: #fff; color: var(--text); margin: 0; padding: 20px; display: flex; justify-content: center; }
+    .container { max-width: 500px; width: 100%; border: 1px solid var(--border); border-radius: 8px; padding: 24px; box-shadow: 0 1px 3px rgba(0,0,0,0.1); }
+    
+    .ghurubi-card { text-align: center; border-bottom: 1px solid var(--border); padding-bottom: 20px; margin-bottom: 20px; }
+    .hijri-date { color: #70757a; font-size: 14px; }
+    .time-main { font-size: 64px; font-weight: 500; margin: 15px 0; letter-spacing: -2px; }
+    
+    .prayer-table { width: 100%; display: grid; grid-template-columns: repeat(6, 1fr); gap: 4px; text-align: center; margin-top: 20px; }
+    .prayer-item { padding: 12px 4px; border-radius: 4px; background: #f8f9fa; border: 1px solid transparent; }
+    .prayer-name { font-size: 11px; font-weight: 700; color: #70757a; margin-bottom: 6px; text-transform: uppercase; }
+    .prayer-time { font-size: 12px; font-weight: 500; }
+
+    .daily-box { margin-top: 25px; padding: 15px; background: #fdfdfd; border-radius: 8px; border-left: 4px solid var(--primary); }
+    .verse-title { font-size: 13px; color: var(--primary); font-weight: 700; text-transform: uppercase; margin-bottom: 8px; }
+    .arabic-text { font-size: 22px; direction: rtl; display: block; margin-bottom: 8px; line-height: 1.6; }
+    .english-text { font-size: 14px; color: #444; line-height: 1.4; }
+
+    .controls { margin-top: 20px; display: flex; gap: 8px; }
+    select { flex: 1; padding: 10px; border-radius: 4px; border: 1px solid var(--border); background: #fff; font-size: 14px; }
   </style>
 </head>
-
 <body>
-  <div class="clock">
-    <div class="time" id="time">--:--</div>
 
-    <div class="meta" id="meta"></div>
-
-    <div class="controls">
-      <select id="format">
-        <option value="24">24-Hour</option>
-        <option value="12">AM / PM</option>
-      </select>
-      <button onclick="updateClock()">Refresh</button>
-    </div>
+<div class="container">
+  <div class="ghurubi-card">
+    <div id="hijri" class="hijri-date">-- --- ----</div>
+    <div id="time" class="time-main">--:--</div>
+    <div id="status" style="font-size: 13px; color: #1e8e3e; font-weight: 500;">Calculating Sunset...</div>
   </div>
 
-<script>
-  const formatSelect = document.getElementById("format");
+  <div class="prayer-table" id="prayer-list"></div>
 
-  // Load saved preference
-  const savedFormat = localStorage.getItem("clockFormat") || "24";
-  formatSelect.value = savedFormat;
-
-  formatSelect.addEventListener("change", () => {
-    localStorage.setItem("clockFormat", formatSelect.value);
-    updateClock();
-  });
-
-  function getSunset(date, lat, lon) {
-    return SunCalc.getTimes(date, lat, lon).sunset;
-  }
-
-  function formatTime(hours, minutes, format) {
-    if (format === "12") {
-      const ampm = hours >= 12 ? "PM" : "AM";
-      hours = hours % 12 || 12;
-      return `${hours}:${minutes.toString().padStart(2,"0")} ${ampm}`;
-    }
-    return `${hours.toString().padStart(2,"0")}:${minutes.toString().padStart(2,"0")}`;
-  }
-
-  function updateClock() {
-    navigator.geolocation.getCurrentPosition(pos => {
-      const lat = pos.coords.latitude;
-      const lon = pos.coords.longitude;
-
-      const now = new Date();
-      const sunsetToday = getSunset(now, lat, lon);
-
-      let refSunset = sunsetToday;
-      if (now < sunsetToday) {
-        refSunset = getSunset(new Date(now - 86400000), lat, lon);
-      }
-
-      const diffMs = now - refSunset;
-      const diffMinutes = Math.floor(diffMs / 60000);
-
-      let hours = Math.floor(diffMinutes / 60) % 24;
-      let minutes = diffMinutes % 60;
-
-      const format = formatSelect.value;
-      document.getElementById("time").textContent =
-        formatTime(hours, minutes, format);
-
-      document.getElementById("meta").textContent =
-        `Sunset reference: ${refSunset.toLocaleString()} — Local time: ${now.toLocaleString()}`;
-    });
-  }
-
-  updateClock();
-  setInterval(updateClock, 60000);
-</script>
-</body>
-</html>
+  <div class="daily-box">
+    <div class="verse-title">Daily Quranic Verse</div>
+    <span id="q-ar" class="arabic-text
